package modele.categorie;

import modele.Categorie;

public class Carreau extends Categorie{
	
	public Carreau(){
		
		super(Couleur.Rouge);
		
	}

	@Override
	public String toString() {
		return "Carreau";
	}

}
