package modele.categorie;

import modele.Categorie;

public class Coeur extends Categorie{

	public Coeur() {
		
		super(Couleur.Rouge);

	}

	@Override
	public String toString() {
		return "Coeur";
	}
	
}
