@startuml

title __CATEGORIE's Class Diagram__\n

  package modele {
    package modele.categorie {
      class Carreau {
          + Carreau()
          + toString()
      }
    }
  }
  

  package modele {
    package modele.categorie {
      class Coeur {
          + Coeur()
          + toString()
      }
    }
  }
  

  package modele {
    package modele.categorie {
      enum Couleur {
        Rouge
        Noir
        couleur
      }
    }
  }
  

  package modele {
    package modele.categorie {
      class Pique {
          + Pique()
          + toString()
      }
    }
  }
  

  package modele {
    package modele.categorie {
      class Trefle {
          + Trefle()
          + toString()
      }
    }
  }
  

  Carreau -up-|> Categorie
  Coeur -up-|> Categorie
  Pique -up-|> Categorie
  Trefle -up-|> Categorie


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
